--- a/starter/03-CSS-Fundamentals/challenge/index.html
+++ b/starter/03-CSS-Fundamentals/challenge/index.html
@@ -3,35 +3,38 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
-    <article class="product">
-      <h2 class="product-title">Converse Chuck Taylor All Star Low Top</h2>
-      <img
-        src="../img/challenges.jpg"
-        lt="Chuck Taylor All Star Shoe"
-        height="250"
-        width="250"
-      />
-      <p class="price"><strong>$65.00</strong></p>
-      <p class="shipping">Free Shipping</p>
-      <p>
-        Ready to dress up or down, these classic canvas Chucks are an everyday
-        wardrobe staple.
-      </p>
-      <a class="more-info" href="https://www.converse.com" >More information &#8594;</a>
 
-      <h3 class="details-title">Product details</h3>
-      <ul class="details-list">
-        <li>Lightweight, durable canvas sneaker</li>
-        <li>Lightly padded footbed for added comfort</li>
-        <li>Iconic Chuck Taylor ankle patch</li>
-      </ul>
-  
-      <button class="add-cart">Add to cart</button>
-    </article>
+      <article class="product">
+        <h2 class="product-title">Converse Chuck Taylor All Star Low Top</h2>
+        <img
+          src="../img/challenges.jpg"
+          lt="Chuck Taylor All Star Shoe"
+          height="250"
+          width="250"
+        />
+        <p class="price"><strong>$65.00</strong></p>
+        <p class="shipping">Free Shipping</p>
+        <p>
+          Ready to dress up or down, these classic canvas Chucks are an everyday
+          wardrobe staple.
+        </p>
+        <a class="more-info" href="https://www.converse.com"
+          >More information &#8594;</a
+        >
+
+        <h3 class="details-title">Product details</h3>
+        <ul class="details-list">
+          <li>Lightweight, durable canvas sneaker</li>
+          <li>Lightly padded footbed for added comfort</li>
+          <li>Iconic Chuck Taylor ankle patch</li>
+        </ul>
+
+        <button class="add-cart">Add to cart</button>
+      </article>
 
   </body>
 </html>
